[gd_scene load_steps=13 format=2]

[ext_resource path="res://environment/trees/tree_medium_1.png" type="Texture" id=1]
[ext_resource path="res://environment/trees/tree_medium_0.png" type="Texture" id=2]
[ext_resource path="res://environment/trees/tree_medium_2.png" type="Texture" id=3]
[ext_resource path="res://Tree_Medium.gd" type="Script" id=4]
[ext_resource path="res://effects/trees/medium_heal/tree_medium_heal_1.png" type="Texture" id=5]
[ext_resource path="res://effects/trees/medium_heal/tree_medium_heal_2.png" type="Texture" id=6]
[ext_resource path="res://effects/trees/medium_heal/tree_medium_heal_3.png" type="Texture" id=7]
[ext_resource path="res://effects/trees/medium_heal/tree_medium_heal_0.png" type="Texture" id=8]
[ext_resource path="res://effects/trees/medium_heal/tree_medium_heal_4.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.6071, 26.6795 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 9 ) ],
"loop": true,
"name": "Heal",
"speed": 5.0
} ]

[node name="Tree_Medium" type="Area2D"]
collision_layer = 128
script = ExtResource( 4 )

[node name="Tree_Anim" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
z_index = -3
frames = SubResource( 1 )
animation = "Idle"
frame = 1
playing = true

[node name="Tree_Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( -0.333393, 4.98061 )
shape = SubResource( 2 )

[node name="Tree_Heal_Anim" type="AnimatedSprite" parent="."]
position = Vector2( -0.79055, 16.811 )
scale = Vector2( 2, 2 )
frames = SubResource( 3 )
animation = "Heal"

[node name="Tree_Heal_Timer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="body_entered" from="." to="." method="_on_Tree_Medium_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Tree_Medium_body_exited"]
[connection signal="animation_finished" from="Tree_Heal_Anim" to="." method="_on_Tree_Heal_Anim_animation_finished"]
[connection signal="timeout" from="Tree_Heal_Timer" to="." method="_on_Tree_Heal_Timer_timeout"]
